# ml_tech_challenge

./: .gitignore  README.md  pyproject.toml
Part-1/: eda.html  eda.ipynb  eda_update.ipynb
Part-3/: similarity.ipynb  test.py
Part-4/: forecasting.ipynb
