[tool.poetry]
name = "ml_tech_challenge"
version = "0.1.0"
description = "Mercado Libre technical challenge"
authors = ["Leonardo Darre <lrdarre@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
pandas = "^1.5.0"
seaborn = "^0.12.0"
jupyter = "^1.0.0"
ipyplot = "^1.1.0"
xgboost = "~1.5.2"
sklearn = "^0.0"
category-encoders = "^2.2.2"
plotly = "^5.6.0"

# Formatting
black = "22.6.0"
isort = "^5.9.3"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
